dashboard initail code with routing

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<div class="headerWrapper">
+    <div class="logedInDetails">Logged in as: Rufiyan Hasan</div>
+    <div class="headerContents">
+        <div class="settings"><img class="headerImg" src="../../assets/Wrench.svg" alt="settings"><div class="indicator">0</div></div>
+        <div class="notification"><img class="headerImg" src="../../assets/Bell.svg" alt="bell"><div class="indicator">0</div></div>
+        <div class="userProfile"><img class="headerImgUser" src="../../assets/UserCircle.svg" alt="user"><div class="userName">Rufiyan Hasan</div></div>
+        <div class="language">Eng</div>
+    </div>
+</div>
